--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,31 @@
-$ pip freeze > requirements.txt
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+dash==1.8.0
+dash-core-components==1.7.0
+dash-html-components==1.0.2
+dash-renderer==1.2.3
+dash-table==4.6.0
+Flask==1.1.1
+Flask-Compress==1.4.0
+future==0.18.2
+gunicorn==20.0.4
+heroku==0.1.4
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+joblib==0.14.1
+MarkupSafe==1.1.1
+nltk==3.4.5
+numpy==1.18.1
+pandas==0.25.3
+plotly==4.5.0
+python-dateutil==1.5
+pytz==2019.3
+requests==2.22.0
+retrying==1.3.3
+scikit-learn==0.22.1
+scipy==1.4.1
+six==1.14.0
+urllib3==1.25.8
+Werkzeug==0.16.1
